add changes to portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-    <header class="page-header">
+    <header class="page__header">
       <div class="container main__nav">
         <nav class="navigation">
           <a href="/index.html" class="logo">Web<span>Studio</span> </a>
@@ -86,10 +86,9 @@
                   width="370"
                 />
                 <p class="portfolio__descr">
-                  /*portfolio__descr*/ Ресурс пропонує комплексні пропозиції з
-                  різним рівнем функціоналу та сервісів. Все це дозволить
-                  відвідувачу отримати вичерпні відомості про компанію чи
-                  приватну особу.
+                  Ресурс пропонує комплексні пропозиції з різним рівнем
+                  функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу.
                 </p>
 
                 <div class="portfolio__wrap">
